<resources>
    <string name="app_name">JuiceLife</string>
    <string name="fname">First name*</string>
    <string name="lname">Last name*</string>
    <string name="email">Email*</string>
    <string name="address">Address*</string>
    <string name="save">Save</string>
    <string name="set_del">Set Delivery Time (optional)</string>
    <string name="price">Price</string>
    <string name="taxes">Taxes</string>
    <string name="del_charge">"Delivery Charge     "</string>
    <string name="tot_price">Total Price</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="title_activity_del_city">delCity</string>
    <string-array name="cities">
        <item>Waligama</item>
        <item>Galle</item>
        <item>Godagama</item>
        <item>Matara</item>
    </string-array>
    <string name="select_city">Select Your City</string>
    <string name="back">Go Back</string>
    <string name="tax">25.00</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="con_no">Contact Number*</string>
    <string name="cont">continue</string>
    <string name="name">Name</string>
    <string name="txtAddress">Address</string>
    <string name="textConNo">Contact No</string>
    <string name="go_back">go back</string>
    <string name="view">view</string>
    <string name="update">update</string>
    <string name="city_image">City image</string>
    <string name="deli_image">Delivery image</string>
    <string name="cancel">cancel</string>
    <string name="add">add</string>
    <string name="Choose">Choose A Payment Method</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="cardPayment">Card Payment</string>
    <string name="EnterCard_No">Enter number</string>
    <string name="EnterCode">3 or 4 digits code</string>
    <string name="fName">Full Name</string>
    <string name="telephoneNo">Tel</string>
    <string name="eMail">E-mail</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="okButton">OK</string>
    <string name="CardName">Name On Card</string>
    <string name="CardNumbr">Card Number</string>
    <string name="price1">LKR 1500.00</string>
    <string name="Expiration">Expiration</string>
    <string name="cvc">CVC/CW</string>
    <string name="payNowbutton">Pay Now</string>
    <string name="mastercard">Master Card</string>
    <string name="visaCard">visa</string>
    <string name="cashpayment">Cash</string>
    <string name="cardpayment">card</string>
    <string name="moneycash">cash</string>

    <string-array name="names">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="Year">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string name="Juices">Juices</string>
    <string name="Desserts">Desserts</string>
    <string name="Mocktail">Mocktails</string>
    <string name="Smoothies">Smoothies</string>
    <string name="Price">Price :-</string>
    <string name="mangoprice">540 LKR</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mangojuice">Mango Juice</string>
    <string name="addcart">Add To Cart</string>
    <string name="mangoImg">mangoimage</string>
    <string name="papayaImg">papayaimage</string>
    <string name="papayajuice">Papaya Juice</string>
    <string name="papayaprice">480 LKR</string>
    <string name="showcart">Show Cart</string>
    <string name="shoppingcart">Shopping Cart</string>
    <string name="amount">Total Goods</string>
    <string name="tamountprice">1250 LKR</string>
    <string name="updatecart">Update Cart</string>
    <string name="checkout">Checkout</string>
    <string name="passion">Passion Fruit Juice</string>
    <string name="passionImg">passionimage</string>
    <string name="passionprice">660 LKR</string>
    <string name="bananaboatImg">bananaboatimage</string>
    <string name="bananaboat">Banana Boat</string>
    <string name="bananaboatprice">600 LKR</string>
    <string name="brownie">Brownie</string>
    <string name="brownieImg">brownieimage</string>
    <string name="brownietxt">Brownie</string>
    <string name="brownieprice">700 LKR</string>
    <string name="chocolatepieimg">chocolatepieimage</string>
    <string name="chocolatepietext">Chocolate Pie</string>
    <string name="mocktailtext">Mocktails</string>
    <string name="coconutmocktailtext">Coconut Mocktail</string>
    <string name="strawberrymocktail">Strawberry Mocktail</string>
    <string name="mangomocktailtext">Mango Mocktail</string>
    <string name="smoothie">Smoothies</string>
    <string name="raspberry">Raspberry Smoothie</string>
    <string name="pinapple">Pineapple Smoothie</string>
    <string name="applesmoothie">Apple Smoothie</string>
    <string name="emptycart">Empty Cart</string>
    <string name="total">3160 LKR</string>
    <string name="products">Products</string>
    <string name="welcome">Welcome To JuiceLife!</string>
    <string name="partyreservation">Party Reservation</string>

    <string name="app_name">sampleFirebase</string>
    <string name="BtnSave">Add</string>
    <string name="BtnShow">View</string>
    <string name="BtnUpdate">Update</string>
    <string name="BtnDelete">Cancel</string>
    <string name="BtnDate">Date</string>
    <string name="TxtDate"></string>
    <string name="TxtMain">Celebrate Your Amazing Events</string>
    <string name="TxtMain2">With JUICE LIFE</string>

    <string name="TxtReserve">Reserve Now!</string>
    <string name="BtnHallIntent">Show Hall Details</string>
    <string name="Txta1">Hall A</string>
    <string name="Txta2">1-5 people</string>
    <string name="Txta3">Rs.1500</string>
    <string name="Txtb1">Hall B</string>
    <string name="Txtb2">5-10 people</string>
    <string name="Txtb3">Rs.3000</string>
    <string name="Txtc1">Hall C</string>
    <string name="Txtc2">more than 10</string>
    <string name="Txtc3">Rs.4000</string>
    <string name="BtnGoBack">Go Back</string>

    <string name="partyIDError">Enter a valid ID</string>
    <string name="reservationNameError">Enter a valid Name</string>
    <string name="contactNumberError">Enter a valid contact number</string>
    <string name="QuantityError">Enter a valid quantity (between 1-25)</string>

</resources>
