<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bill">

    <!--<Button
        android:id="@+id/confirmDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_background"
        android:text="@string/confirm_delivery"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/BtnBack2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BtnBack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background"
        android:text="@string/go_back"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
-->
    <ImageView
        android:id="@+id/imgDel"
        android:layout_width="155dp"
        android:layout_height="147dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/deli_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/deliveryperson" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="205dp"
        android:text="@string/price"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="2250.00"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtPrice"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtTax"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/taxes"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

    <TextView
        android:id="@+id/tax"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/tax"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTax"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtDelCharge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/del_charge"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTax" />

    <TextView
        android:id="@+id/delCharge"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtDelCharge"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/tot_price"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDelCharge" />

    <TextView
        android:id="@+id/totPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>